<resources>
    <string name="app_name">MoodLog</string>
    <string name="button_log_new_entry">Log new entry</string>
    <string name="mood10">Awesome</string>
    <string name="mood9">Great</string>
    <string name="mood8">Good</string>
    <string name="mood7">Pretty good</string>
    <string name="mood6">Okay</string>
    <string name="mood5">So-so</string>
    <string name="mood4">Meh</string>
    <string name="mood3">Bad</string>
    <string name="mood2">Very bad</string>
    <string name="mood1">Awful</string>
    <string name="log_occupation">Log occupation</string>
    <string name="save_entry">Save entry</string>
    <string name="button_settings">Settings</string>
    <string name="button_empty_data">Empty data</string>
    <string name="button_view_data">View mood data</string>
    <string name="button_init_test_data">Reinitialize and add test data</string>
    <string name="lbl_name">Name</string>
    <string name="but_Add">Add</string>
    <string name="hint_new_detailed_mood">New detailed mood</string>
    <string name="new_occupation_name">New occupation name</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="but_Update_start_date">Update start date</string>
    <string name="update_End_date">Update end date</string>
    <string name="but_View_mood_report">View mood report</string>
    <string name="title_activity_view_occupation_report">ViewOccupationReport</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
